2001-07-31  Gary Houston  <ghouston@arglist.com>

	* srfi-14.c (scm_char_set_diff_plus_intersection): wasn't correctly
	accounting for the (char-set-union cs2...) in the spec.  i.e.,
	(char-set-diff+intersection a) -> copy-of-a, empty-set
	and the following are equivalent:
	(char-set-diff+intersection a (char-set #\a) (char-set #\b))
	(char-set-diff+intersection a (char-set #\a #\b))

	(scm_char_set_xor_x): disabled the side-effecting code, since it
	gives inconsistent results to scm_char_set_xor for the case
	(char-set-xor! a a a).
	
	(scm_char_set_diff_plus_intersection_x): added cs2 argument, since
	two arguments are compulsory in final spec.  also similar changes
	as for scm_char_set_diff_plus_intersection.
	* srfi-14.h (scm_char_set_diff_plus_intersection_x): added cs2.

2001-07-22  Gary Houston  <ghouston@arglist.com>

	* srfi-14.c (scm_char_set_intersection, scm_char_set_xor): remove
	the compulsory cs1 arguments: all args are optional in final spec.

	* srfi-14.h: declarations updated.

2001-07-18  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-11.scm, srfi-8.scm: Update copyright notice.

2001-07-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-14.c: Okay.  Now I got it.  Really.  This time it's fixed.
	Guaranteed. (Maybe)
	
	* srfi-19.scm: Define `current-time' before exporting it.

2001-07-17  Martin Grabmueller  <mgrabmue@cs.tu-berlin.de>

	* srfi-14.c: Fix for bug caused by brain-malfunctioning on my
	side.  Bit sets were handled wrong because I couldn't tell bit
	counts from byte counts.  Also, the bit array should be 256 / 8
	bytes long.  Thank you, Gary!	

	Removed unnecessary protoype for scm_char_set_copy.

2001-07-16  Gary Houston  <ghouston@arglist.com>

	* srfi-14.scm: export string->char-set!, not string-char-set!.

	* srfi-14.c (scm_char_set_ref, scm_char_set_cursor_next,
	scm_end_of_char_set_p): reject negative	cursor values.
	(scm_list_to_char_set, scm_list_to_char_set_x): when reporting